--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -122,13 +122,7 @@ jobs:
             templates/                           \
             module/                              \
             css/                                 \
-            packs/capacities.db                         \
-            packs/items.db                         \
-            packs/macros.db                         \
-            packs/paths.db                         \
-            packs/profiles.db                         \
-            packs/tables.db                         \
-            packs/traits.db                         \
+            packs/                               \
             ui/                                  \
             fonts/                               \
             sounds/                              \
