--- a/package.json
+++ b/package.json
@@ -12,14 +12,36 @@
   "browserslist": [
     "last 3 versions"
   ],
-  "author": "Zigmund",
+  "author": "Kristov",
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "gulp": "^4.0.2",
-    "gulp-less": "^4.0.1"
+    "gulp": "^5.0.0",
+    "gulp-less": "^5.0.0"
   },
   "devDependencies": {
-    "@foundryvtt/foundryvtt-cli": "^1.0.2"
+    "@babel/eslint-parser": "^7.26.5",
+    "@eslint/js": "^9.9.1",
+    "@foundryvtt/foundryvtt-cli": "^1.0.2",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "commander": "^11.1.0",
+    "eslint": "^9.18.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jsdoc": "^48.11.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "fancy-log": "^2.0.0",
+    "fs": "^0.0.1-security",
+    "globals": "^15.9.0",
+    "gulp-eslint7": "^0.3.1",
+    "gulp-if": "^3.0.0",
+    "gulp-minify": "^3.1.0",
+    "less": "^4.1.3",
+    "merge-stream": "^2.0.0",
+    "nedb": "^1.8.0",
+    "path": "^0.12.7",
+    "prettier": "^3.3.3",
+    "rollup": "^2.77.0",
+    "through2": "^4.0.2",
+    "yargs": "^17.5.1"
   }
 }
